--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div>
                     <h1><span class="text-info">Toná Prasa</span> Bot</h1>
                     <p>Toná Prasa é um bot que te ajuda administrar seu servidor e garantir diversão para seus membros com comandos diversos!</p>
-                    <a class="btn btn-info" href="">Me convide</a>
+                    <a class="btn btn-info" href="https://discord.com/api/oauth2/authorize?client_id=1011094212021850228&permissions=8&scope=bot">Me convide</a>
                 </div>
                 <img class="img-fluid w-50" src="./img/ArisBot.svg" alt="">
             </div>
